Archive2/f2/ebe1bd3df88acd/output
main.cpp: In function 'int main()':
main.cpp:20:20: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for (int i = 1; i <= c.size() - 1; i++) {
                    ^
main.cpp:26:10: error: expected '}' at end of input
  return 0;
          ^
